backend-locust-serve.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-locust-access
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
