mongo-conf.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongodb-service
subsets:
- addresses:
  - ip: 10.128.0.50 #<VM_INTERNAL_IP>
  ports:
  - port: 27017
